--- a/prAndroidERP/res/values/strings.xml
+++ b/prAndroidERP/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="main_act_tv1">Esperando lectura cód. barras&#8230;</string>
+    <string name="main_act_tv2">Líneas Venta</string>
     <string name="mainact_btCancelar">Cancelar</string>
     <string name="mainact_btConfirmar">Confirmar</string>
 	<color name="gris_snow">#CDC9C9</color>
