--- a/trunk/prAndroidERP/res/values/strings.xml
+++ b/trunk/prAndroidERP/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="main_act_tv1">Esperando lectura cód. barras&#8230;</string>
     <string name="main_act_tv2">Líneas Venta</string>
-    <string name="mainact_btCancelar">Cancelar</string>
-    <string name="mainact_btConfirmar">Confirmar</string>
+    <string name="main_act_btCancelar">Cancelar</string>
+    <string name="main_act_btConfirmar">Confirmar</string>
 	<color name="gris_snow">#CDC9C9</color>
 	<color name="rojo_salmon">#FF6666</color>
 	<color name="rojo_scarlet">#8C1717</color>
